size adpat to screen 3rd

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     </head>
 
     <body>
-        <img src="./pics/2023 LUCKY RABBIT - A1 _ White Frame.jfif" ><br>
-        <img src="./pics/bunnies.png" width="1024"><br>
-        <img src="./pics/2023年 縁起物が沢山描かれた写真フレームのある卯年の年賀状.jfif" width="1024"><br>
-        <img src="./pics/Chinese New Year Prediction 2019 For rabbit.png" width="1024"><br>
-        <img src="./pics/Premium Vector _ Happy chinese new year 2023 rabbit zodiac sign for the year of the rabbit (1).jfif" width="1024"><br>
-        <img src="./pics/last.jfif" width="1024">
+        <img src="./pics/2023 LUCKY RABBIT - A1 _ White Frame.jfif" style="max-width: 100%;" ><br>
+        <!-- 首先都放大成宽度为1024 然后最大宽度按按照屏幕100%放缩 -->
+        <img src="./pics/bunnies.png" width="1024" style="max-width: 100%;" ><br>
+        <img src="./pics/2023年 縁起物が沢山描かれた写真フレームのある卯年の年賀状.jfif" width="1024" style="max-width: 100%;"><br>
+        <img src="./pics/Chinese New Year Prediction 2019 For rabbit.png" width="1024" style="max-width: 100%;"><br>
+        <img src="./pics/Premium Vector _ Happy chinese new year 2023 rabbit zodiac sign for the year of the rabbit (1).jfif" width="1024" style="max-width: 100%;"><br>
+        <img src="./pics/last.jfif" width="1024" style="max-width: 100%;">
     </body>
 </html>
