--- a/index.html
+++ b/index.html
@@ -1,18 +1,112 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width ,initial-scale=1, maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-        <title>Family Get-together</title>
-    </head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Family Get-together</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-    <body>
-        <img src="./pics/2023 LUCKY RABBIT - A1 _ White Frame.jfif" style="max-width: 100%;" ><br>
-        <!-- 首先都放大成宽度为1024 然后最大宽度按按照屏幕100%放缩 -->
-        <img src="./pics/bunnies.png" width="1024" style="max-width: 100%;" ><br>
-        <img src="./pics/2023年 縁起物が沢山描かれた写真フレームのある卯年の年賀状.jfif" width="1024" style="max-width: 100%;"><br>
-        <img src="./pics/Chinese New Year Prediction 2019 For rabbit.png" width="1024" style="max-width: 100%;"><br>
-        <img src="./pics/Premium Vector _ Happy chinese new year 2023 rabbit zodiac sign for the year of the rabbit (1).jfif" width="1024" style="max-width: 100%;"><br>
-        <img src="./pics/last.jfif" width="1024" style="max-width: 100%;">
-    </body>
+    <div class="img-slider">
+      <div class="slide active">
+        <img src="pic1.jfif" alt="">
+        <div class="info">
+          <h2>Slide 01</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="pic2.jfif" alt="">
+        <div class="info">
+          <h2>Slide 02</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="pic3.jfif" alt="">
+        <div class="info">
+          <h2>Slide 03</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="pic4.jfif" alt="">
+        <div class="info">
+          <h2>Slide 04</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="pic5.jfif" alt="">
+        <div class="info">
+          <h2>Slide 05</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+      <div class="navigation">
+        <div class="btn active"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+      </div>
+    </div>
+
+    <script type="text/javascript">
+    var slides = document.querySelectorAll('.slide');
+    var btns = document.querySelectorAll('.btn');
+    let currentSlide = 1;
+
+    // Javascript for image slider manual navigation
+    var manualNav = function(manual){
+      slides.forEach((slide) => {
+        slide.classList.remove('active');
+
+        btns.forEach((btn) => {
+          btn.classList.remove('active');
+        });
+      });
+
+      slides[manual].classList.add('active');
+      btns[manual].classList.add('active');
+    }
+
+    btns.forEach((btn, i) => {
+      btn.addEventListener("click", () => {
+        manualNav(i);
+        currentSlide = i;
+      });
+    });
+
+    // Javascript for image slider autoplay navigation
+    /* var repeat = function(activeClass){
+      let active = document.getElementsByClassName('active');
+      let i = 1;
+
+      var repeater = () => {
+        setTimeout(function(){
+          [...active].forEach((activeSlide) => {
+            activeSlide.classList.remove('active');
+          });
+
+        slides[i].classList.add('active');
+        btns[i].classList.add('active');
+        i++;
+
+        if(slides.length == i){
+          i = 0;
+        }
+        if(i >= slides.length){
+          return;
+        }
+        repeater();
+      }, 10000);
+      }
+      repeater();
+    } */
+    repeat();
+    </script>
+
+  </body>
 </html>
