add music if it works

--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html >
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Get-together</title>
+    
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <audio hidden autoplay loop playsinline src="./相亲相爱一家人.mp3"></audio>
     <div class="img-slider">
       <div class="slide active">
         <img src="pic1.jfif" alt="">
         <div class="info">
-          <h2>Slide 01</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <br>
+          <h2>来自癸卯年的邀请</h2>
+          <!-- <p></p> -->
         </div>
       </div>
       <div class="slide">
         <img src="pic2.jfif" alt="">
         <div class="info">
-          <h2>Slide 02</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <!-- <h2>Slide 02</h2> -->
+          <br><br><br><br>
+          <p>&emsp;岁月不居，时节如流，当厚厚的日历翻剩下薄薄的一页，不平凡的2022年，也即将画上句点。</p>
         </div>
       </div>
       <div class="slide">
         <img src="pic3.jfif" alt="">
         <div class="info">
-          <h2>Slide 03</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <br><br><br><br>
+          <p>&emsp;每个辞旧迎新的时刻，能让我们拥有新的开始和展望，美好的事物都在悄然酝酿！</p>
         </div>
       </div>
       <div class="slide">
         <img src="pic4.jfif" alt="">
         <div class="info">
-          <h2>Slide 04</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <br><br><br><br>
+          <p>亲爱的家人们：<br>&emsp;兹定于<b>阳历2023年1月20日&ensp;阴历壬寅年腊月甘九日</b><br>&emsp;让我们相聚在<b>恒大御景半岛37栋502</b>，共迎新春，畅谈未来！期待你们的到来！</p>
         </div>
       </div>
       <div class="slide">
         <img src="pic5.jfif" alt="">
-        <div class="info">
-          <h2>Slide 05</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="info" id="end" >
+          <h2>&ensp;玉兔迎春<br>好运年增</h2>
         </div>
       </div>
       <div class="navigation">
