see if music plays

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- <audio hidden autoplay loop playsinline src="./相亲相爱一家人.mp3"></audio> -->
+    <audio hidden controls autoplay loop playsinline src="./相亲相爱一家人.mp3"></audio>
     <div class="img-slider">
       <div class="slide active">
         <img src="pic1.jfif" alt="">
