--- a/index.html
+++ b/index.html
@@ -1,114 +1,54 @@
 <!DOCTYPE html>
-<html >
-  <head>
-    <meta charset="utf-8">
+<html>
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Family Get-together</title>
-    
+
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <audio hidden controls autoplay loop playsinline src="./相亲相爱一家人.mp3"></audio>
-    <div class="img-slider">
-      <div class="slide active">
-        <img src="pic1.jfif" alt="">
-        <div class="info">
-          <br>
-          <h2>来自癸卯年的邀请</h2>
-          <!-- <p></p> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
+<body>
+    <section class="container">
+        <div class="card" data-aos="zoom-in">
+            <div class="card-imgage " >
+                <img src="pic1.jfif" alt="">
+            </div>
+            <h3>来自癸卯年的邀请</h3>
         </div>
-      </div>
-      <div class="slide">
-        <img src="pic2.jfif" alt="">
-        <div class="info">
-          <!-- <h2>Slide 02</h2> -->
-          <br><br><br><br>
-          <p>&emsp;岁月不居，时节如流，当厚厚的日历翻剩下薄薄的一页，不平凡的2022年，也即将画上句点。</p>
+        <div class="card" data-aos="zoom-in" >
+            <div class="card-imgage">
+                <img src="pic2.jfif" class="adjust-image" alt="">
+                <p>&emsp;岁月不居，时节如流，当厚厚的日历翻剩下薄薄的一页，不平凡的2022年，也即将画上句点。</p>
+            </div>
         </div>
-      </div>
-      <div class="slide">
-        <img src="pic3.jfif" alt="">
-        <div class="info">
-          <br><br><br><br>
-          <p>&emsp;每个辞旧迎新的时刻，能让我们拥有新的开始和展望，美好的事物都在悄然酝酿！</p>
+        <div class="card" data-aos="zoom-in">
+            <div class="card-imgage " >
+                <img src="pic3.jfif" class="adjust-image" alt="">
+                <p>&emsp;每个辞旧迎新的时刻，能让我们拥有新的开始和展望，美好的事物都在悄然酝酿！</p>
+            </div>
         </div>
-      </div>
-      <div class="slide">
-        <img src="pic4.jfif" alt="">
-        <div class="info">
-          <br><br><br><br>
-          <p>亲爱的家人们：<br>&emsp;兹定于<b>阳历2023年1月20日&ensp;阴历壬寅年腊月甘九日</b><br>&emsp;让我们相聚在<b>恒大御景半岛37栋502</b>，共迎新春，畅谈未来！期待你们的到来！</p>
+        <div class="card" data-aos="zoom-in">
+            <div class="card-imgage">
+                <img src="pic4.jfif" class="adjust-image" alt="">
+                <p>亲爱的家人们：<br>&emsp;兹定于<b>阳历2023年1月20日&ensp;阴历壬寅年腊月甘九日</b><br>&emsp;让我们相聚在<b>恒大御景半岛37栋502</b>，共迎新春，畅谈未来！期待你们的到来！</p>
+            </div>
         </div>
-      </div>
-      <div class="slide">
-        <img src="pic5.jfif" alt="">
-        <div class="info" id="end" >
-          <h2>&ensp;玉兔迎春<br>好运年增</h2>
+        <div class="card end-card" data-aos="zoom-in">
+            <div class="card-imgage " >
+                <img src="pic5.jfif" alt="">
+            </div>
+            <h3>玉兔迎春 好运年增</h3>
         </div>
-      </div>
-      <div class="navigation">
-        <div class="btn active"></div>
-        <div class="btn"></div>
-        <div class="btn"></div>
-        <div class="btn"></div>
-        <div class="btn"></div>
-      </div>
-    </div>
 
-    <script type="text/javascript">
-    var slides = document.querySelectorAll('.slide');
-    var btns = document.querySelectorAll('.btn');
-    let currentSlide = 1;
+    </section>
 
-    // Javascript for image slider manual navigation
-    var manualNav = function(manual){
-      slides.forEach((slide) => {
-        slide.classList.remove('active');
-
-        btns.forEach((btn) => {
-          btn.classList.remove('active');
-        });
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 500,
+        once: false,
       });
-
-      slides[manual].classList.add('active');
-      btns[manual].classList.add('active');
-    }
-
-    btns.forEach((btn, i) => {
-      btn.addEventListener("click", () => {
-        manualNav(i);
-        currentSlide = i;
-      });
-    });
-
-    // Javascript for image slider autoplay navigation
-    /* var repeat = function(activeClass){
-      let active = document.getElementsByClassName('active');
-      let i = 1;
-
-      var repeater = () => {
-        setTimeout(function(){
-          [...active].forEach((activeSlide) => {
-            activeSlide.classList.remove('active');
-          });
-
-        slides[i].classList.add('active');
-        btns[i].classList.add('active');
-        i++;
-
-        if(slides.length == i){
-          i = 0;
-        }
-        if(i >= slides.length){
-          return;
-        }
-        repeater();
-      }, 10000);
-      }
-      repeater();
-    } */
-    repeat();
     </script>
-
-  </body>
+</body>
 </html>
